fix : required fields on createclienteDTO
